--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "agnivade",
         "akgoli",
         "buflog",
+        "codeql",
         "expfmt",
         "gomod",
         "grafana",
