--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,17 +24,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup 'go'
-        uses: actions/setup-go@v2
-
-      - name: Cache
-        uses: actions/cache@v2
+        uses: actions/setup-go@v3
         with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ github.job }}-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ github.job }}-${{ runner.os }}-go-
+          go-version-file: 'go.mod'
+          check-latest: true
+          cache: true
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
