--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
         "absos",
         "agnivade",
         "akgoli",
+        "Autobuild",
         "buflog",
+        "Codecov",
         "codeql",
         "expfmt",
         "gomod",
