feat: appinfo. make code a bit more dig-friendly.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "absos",
         "agnivade",
         "akgoli",
+        "appinfo",
         "Autobuild",
         "buflog",
         "Codecov",
