feat: some docs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,15 +8,32 @@
         "buflog",
         "Codecov",
         "codeql",
+        "constanttime",
+        "consterr",
+        "dnssvc",
+        "dnssvcmock",
         "expfmt",
+        "funcs",
         "gomod",
+        "goroutines",
         "grafana",
+        "httproundtrip",
+        "ldflags",
+        "mgmt",
         "promhttp",
         "sbox",
+        "sboxmock",
         "secretbox",
+        "securerandom",
+        "sizedbufferpool",
         "stretchr",
+        "strslice",
+        "takedroprunes",
         "testutils",
+        "timesvc",
+        "timesvcmock",
         "typesafe",
+        "wakeups",
         "zapcore"
     ]
 }
