fix: fix go mod deps hell

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,8 +15,10 @@
         "expfmt",
         "funcs",
         "gomod",
+        "gopls",
         "goroutines",
         "grafana",
+        "honnef",
         "httproundtrip",
         "ldflags",
         "mgmt",
